[2.6_WAS] Oracle 23C platform - backport from master (#2572)
* Adding Oracle23 Platform