@@ -1,29 +1,52 @@
-/*******************************************************************************
- * Copyright (c) 1998, 2022 Oracle, IBM Corporation and/or its affiliates. All rights reserved.
- * This program and the accompanying materials are made available under the 
- * terms of the Eclipse Public License v1.0 and Eclipse Distribution License v. 1.0 
- * which accompanies this distribution. 
- * The Eclipse Public License is available at http://www.eclipse.org/legal/epl-v10.html
- * and the Eclipse Distribution License is available at 
+/*
+ * Copyright (c) 1998, 2023 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2022 IBM Corporation. All rights reserved.
+ *
+ * This program and the accompanying materials are made available under the
+ * terms of the Eclipse Public License v. 2.0 which is available at
+ * http://www.eclipse.org/legal/epl-2.0,
+ * or the Eclipse Distribution License v. 1.0 which is available at
  * http://www.eclipse.org/org/documents/edl-v10.php.
  *
- * Contributors:
- *     Oracle - initial API and implementation from Oracle TopLink
- *     09/14/2017-2.6 Will Dazey
- *       - 522312: Add the eclipselink.sequencing.start-sequence-at-nextval property 
- ******************************************************************************/  
+ * SPDX-License-Identifier: EPL-2.0 OR BSD-3-Clause
+ */
+
+// Contributors:
+//     Oracle - initial API and implementation from Oracle TopLink
+//     09/29/2016-2.7 Tomas Kraus
+//       - 426852: @GeneratedValue(strategy=GenerationType.IDENTITY) support in Oracle 12c
+//     09/14/2017-2.6 Will Dazey
+//       - 522312: Add the eclipselink.sequencing.start-sequence-at-nextval property
+//     02/20/2018-2.7 Will Dazey
+//       - 529602: Added support for CLOBs in DELETE statements for Oracle
 package org.eclipse.persistence.internal.databaseaccess;
 
-import java.io.*;
-import java.util.*;
+import java.io.IOException;
+import java.io.Writer;
+import java.util.HashMap;
+import java.util.Hashtable;
+import java.util.Iterator;
+import java.util.Map;
+import java.util.Vector;
 
 import org.eclipse.persistence.descriptors.DescriptorQueryManager;
-import org.eclipse.persistence.exceptions.*;
-import org.eclipse.persistence.queries.*;
-import org.eclipse.persistence.internal.helper.*;
+import org.eclipse.persistence.exceptions.ConversionException;
+import org.eclipse.persistence.exceptions.ValidationException;
+import org.eclipse.persistence.expressions.Expression;
+import org.eclipse.persistence.expressions.ExpressionOperator;
+import org.eclipse.persistence.internal.helper.ClassConstants;
+import org.eclipse.persistence.internal.helper.ConversionManager;
+import org.eclipse.persistence.internal.helper.DatabaseField;
+import org.eclipse.persistence.internal.helper.Helper;
 import org.eclipse.persistence.internal.sessions.AbstractSession;
-import org.eclipse.persistence.expressions.*;
-import org.eclipse.persistence.sequencing.*;
+import org.eclipse.persistence.queries.Call;
+import org.eclipse.persistence.queries.DataModifyQuery;
+import org.eclipse.persistence.queries.DatabaseQuery;
+import org.eclipse.persistence.queries.SQLCall;
+import org.eclipse.persistence.queries.ValueReadQuery;
+import org.eclipse.persistence.sequencing.DefaultSequence;
+import org.eclipse.persistence.sequencing.QuerySequence;
+import org.eclipse.persistence.sequencing.Sequence;
 
 /**
  * DatasourcePlatform is private to TopLink. It encapsulates behavior specific to a datasource platform
@@ -59,13 +82,13 @@ public class DatasourcePlatform implements Platform {
 
     /** Store map of sequence names to sequences */
     protected Map sequences;
-    
+
     /** Delimiter to use for fields and tables using spaces or other special values */
     protected String startDelimiter = null;
     protected String endDelimiter = null;
-    
+
     /** Ensures that only one thread at a time can add/remove sequences */
-    protected Object sequencesLock = new Boolean(true);
+    protected Object sequencesLock = Boolean.valueOf(true);
 
     /** If the native sequence type is not supported, if table sequencing should be used. */
     protected boolean defaultNativeSequenceToTable;
@@ -133,6 +156,7 @@ public class DatasourcePlatform implements Platform {
      * Add the parameter.
      * Convert the parameter to a string and write it.
      */
+    @Override
     public void appendParameter(Call call, Writer writer, Object parameter) {
         String parameterValue = (String)getConversionManager().convertObject(parameter, ClassConstants.STRING);
         if (parameterValue == null) {
@@ -148,6 +172,7 @@ public class DatasourcePlatform implements Platform {
     /**
      * Allow for the platform to handle the representation of parameters specially.
      */
+    @Override
     public Object getCustomModifyValueForCall(Call call, Object value, DatabaseField field, boolean shouldBind) {
         return value;
     }
@@ -160,10 +185,12 @@ public class DatasourcePlatform implements Platform {
      * kept in sync: shouldCustomModifyInDatabaseCall should return true if and only if the field
      * is handled by customModifyInDatabaseCall.
      */
+    @Override
     public boolean shouldUseCustomModifyForCall(DatabaseField field) {
         return false;
     }
 
+    @Override
     public Object clone() {
         try {
             DatasourcePlatform clone = (DatasourcePlatform)super.clone();
@@ -212,13 +239,29 @@ public class DatasourcePlatform implements Platform {
      * @exception - ConversionException, all exceptions will be thrown as this type.
      * @return - the newly converted object
      */
+    @Override
     public Object convertObject(Object sourceObject, Class javaClass) throws ConversionException {
         return getConversionManager().convertObject(sourceObject, javaClass);
     }
 
     /**
+     * Convert the object to the appropriate type by invoking the appropriate
+     * ConversionManager method.
+     * @param sourceObject the object that must be converted
+     * @param javaClass the class that the object must be converted to
+     * @param session current database session
+     * @exception ConversionException all exceptions will be thrown as this type.
+     * @return the newly converted object
+     */
+    @Override
+    public Object convertObject(Object sourceObject, Class javaClass, AbstractSession session) throws ConversionException {
+        return convertObject(sourceObject, javaClass);
+    }
+
+    /**
      * Copy the state into the new platform.
      */
+    @Override
     public void copyInto(Platform platform) {
         if (!(platform instanceof DatasourcePlatform)) {
             return;
@@ -239,6 +282,7 @@ public class DatasourcePlatform implements Platform {
     /**
      * The platform hold its own instance of conversion manager to allow customization.
      */
+    @Override
     public ConversionManager getConversionManager() {
         // Lazy init for serialization.
         if (conversionManager == null) {
@@ -247,34 +291,43 @@ public class DatasourcePlatform implements Platform {
         }
         return conversionManager;
     }
-    
+
     /**
      * The platform hold its own instance of conversion manager to allow customization.
      */
+    @Override
     public void setConversionManager(ConversionManager conversionManager) {
         this.conversionManager = conversionManager;
     }
 
     /**
+     * Return the driver version.
+     */
+    public String getDriverVersion() {
+        return "";
+    }
+
+    /**
      * Delimiter to use for fields and tables using spaces or other special values.
-     * 
+     *
      * Some databases use different delimiters for the beginning and end of the value.
      * This delimiter indicates the end of the value.
      */
+    @Override
     public String getEndDelimiter() {
         return endDelimiter;
     }
-    
+
     /**
      * Delimiter to use for fields and tables using spaces or other special values.
-     * 
+     *
      * Some databases use different delimiters for the beginning and end of the value.
      * This delimiter indicates the end of the value.
      */
     public void setEndDelimiter(String endDelimiter) {
         this.endDelimiter = endDelimiter;
     }
-    
+
     /**
      * Return the operator for the operator constant defined in ExpressionOperator.
      */
@@ -316,28 +369,30 @@ public class DatasourcePlatform implements Platform {
 
     /**
      * Delimiter to use for fields and tables using spaces or other special values.
-     * 
+     *
      * Some databases use different delimiters for the beginning and end of the value.
      * This delimiter indicates the start of the value.
      */
+    @Override
     public String getStartDelimiter() {
         return startDelimiter;
     }
-    
+
     /**
      * Delimiter to use for fields and tables using spaces or other special values.
-     * 
+     *
      * Some databases use different delimiters for the beginning and end of the value.
      * This delimiter indicates the start of the value.
      */
     public void setStartDelimiter(String startDelimiter) {
         this.startDelimiter = startDelimiter;
     }
-    
+
     /**
      * Return the qualifier for the table. Required by some
      * databases such as Oracle and DB2
      */
+    @Override
     public String getTableQualifier() {
         return tableQualifier;
     }
@@ -345,12 +400,14 @@ public class DatasourcePlatform implements Platform {
     /**
      * Answer the timestamp from the server.
      */
+    @Override
     public java.sql.Timestamp getTimestampFromServer(AbstractSession session, String sessionName) {
         if (getTimestampQuery() == null) {
             return new java.sql.Timestamp(System.currentTimeMillis());
         } else {
             getTimestampQuery().setSessionName(sessionName);
-            return (java.sql.Timestamp)session.executeQuery(getTimestampQuery());
+            Object result = session.executeQuery(getTimestampQuery());
+            return (java.sql.Timestamp) session.getDatasourcePlatform().convertObject(result, ClassConstants.TIMESTAMP);
         }
     }
 
@@ -359,6 +416,7 @@ public class DatasourcePlatform implements Platform {
      * query that will return the timestamp from the server.
      * return null if the time should be the local time.
      */
+    @Override
     public ValueReadQuery getTimestampQuery() {
         return timestampQuery;
     }
@@ -509,7 +567,7 @@ public class DatasourcePlatform implements Platform {
         addOperator(ExpressionOperator.trunc());
         addOperator(ExpressionOperator.greatest());
         addOperator(ExpressionOperator.least());
-        
+
         addOperator(ExpressionOperator.standardDeviation());
         addOperator(ExpressionOperator.variance());
 
@@ -518,37 +576,42 @@ public class DatasourcePlatform implements Platform {
         addOperator(ExpressionOperator.ref());
         addOperator(ExpressionOperator.refToHex());
         addOperator(ExpressionOperator.value());
-        
+
         addOperator(ExpressionOperator.coalesce());
         addOperator(ExpressionOperator.caseStatement());
         addOperator(ExpressionOperator.caseConditionStatement());
     }
-    
+
     /**
      * INTERNAL:
      * Allow the platform to initialize the CRUD queries to defaults.
      * This is mainly used by EIS platforms, but could be used by relational ones for special behavior.
      */
     public void initializeDefaultQueries(DescriptorQueryManager queryManager, AbstractSession session) {
-        
+
     }
-    
+
+    @Override
     public boolean isAccess() {
         return false;
     }
 
+    @Override
     public boolean isAttunity() {
         return false;
     }
 
+    @Override
     public boolean isCloudscape() {
         return false;
     }
 
+    @Override
     public boolean isDerby() {
         return false;
     }
 
+    @Override
     public boolean isDB2() {
         return false;
     }
@@ -558,39 +621,53 @@ public class DatasourcePlatform implements Platform {
         return false;
     }
 
+    @Override
     public boolean isHANA() {
         return false;
     }
 
+    @Override
     public boolean isH2() {
         return false;
     }
 
+    @Override
     public boolean isDBase() {
         return false;
     }
 
+    @Override
     public boolean isHSQL() {
         return false;
     }
 
+    @Override
     public boolean isInformix() {
         return false;
     }
 
+    @Override
     public boolean isMySQL() {
         return false;
     }
 
+    @Override
     public boolean isODBC() {
         return false;
     }
 
+    @Override
     public boolean isOracle() {
         return false;
     }
 
+    @Override
     public boolean isOracle9() {
+        return false;
+    }
+
+    @Override
+    public boolean isOracle23() {
         return false;
     }
 
@@ -598,42 +675,51 @@ public class DatasourcePlatform implements Platform {
         return false;
     }
 
+    @Override
     public boolean isPostgreSQL(){
-    	return false;
+        return false;
     }
-    
+
+    @Override
     public boolean isPointBase() {
         return false;
     }
 
+    @Override
     public boolean isSQLAnywhere() {
         return false;
     }
 
     public boolean isFirebird() {
         return false;
-    }    
-    
+    }
+
+    @Override
     public boolean isSQLServer() {
         return false;
     }
 
+    @Override
     public boolean isSybase() {
         return false;
     }
 
+    @Override
     public boolean isSymfoware() {
         return false;
     }
 
+    @Override
     public boolean isTimesTen() {
         return false;
     }
 
+    @Override
     public boolean isTimesTen7() {
         return false;
     }
-    
+
+    @Override
     public boolean isMaxDB() {
         return false;
     }
@@ -641,10 +727,11 @@ public class DatasourcePlatform implements Platform {
     /**
      * Allow the platform to initialize itself after login/init.
      */
+    @Override
     public void initialize() {
-        
+
     }
-    
+
     /**
      * OBSOLETE:
      * Can override the default query for returning the sequence numbers.
@@ -671,6 +758,7 @@ public class DatasourcePlatform implements Platform {
      * Set the qualifier for the table. Required by some
      * databases such as Oracle and DB2
      */
+    @Override
     public void setTableQualifier(String qualifier) {
         tableQualifier = qualifier;
     }
@@ -679,6 +767,7 @@ public class DatasourcePlatform implements Platform {
      * Can override the default query for returning a timestamp from the server.
      * See: getTimestampFromServer
      */
+    @Override
     public void setTimestampQuery(ValueReadQuery tsQuery) {
         timestampQuery = tsQuery;
     }
@@ -695,6 +784,7 @@ public class DatasourcePlatform implements Platform {
         }
     }
 
+    @Override
     public String toString() {
         return Helper.getShortClassName(this.getClass());
     }
@@ -722,6 +812,7 @@ public class DatasourcePlatform implements Platform {
     /**
      * Get default sequence
      */
+    @Override
     public Sequence getDefaultSequence() {
         if (!hasDefaultSequence()) {
             setDefaultSequence(createPlatformDefaultSequence());
@@ -740,6 +831,7 @@ public class DatasourcePlatform implements Platform {
      * Set default sequence. In case the passed sequence is of type DefaultSequence - use platformDefaultSequence
      * with name and size of the passed sequence.
      */
+    @Override
     public void setDefaultSequence(Sequence sequence) {
         if (sequence instanceof DefaultSequence) {
             Sequence platformDefaultSequence = createPlatformDefaultSequence();
@@ -758,6 +850,7 @@ public class DatasourcePlatform implements Platform {
     /**
      * Add sequence corresponding to the name
      */
+    @Override
     public void addSequence(Sequence sequence) {
         addSequence(sequence, false);
     }
@@ -775,9 +868,10 @@ public class DatasourcePlatform implements Platform {
      * Add sequence corresponding to the name.
      * Use this method with isSessionConnected parameter set to true
      * to add a sequence to connected session.
-     * If the session is connected then the sequence is added only 
+     * If the session is connected then the sequence is added only
      * if there is no sequence with the same name already in use.
      */
+    @Override
     public void addSequence(Sequence sequence, boolean isSessionConnected) {
         synchronized(sequencesLock) {
             if (isSessionConnected) {
@@ -803,6 +897,7 @@ public class DatasourcePlatform implements Platform {
     /**
      * Get sequence corresponding to the name
      */
+    @Override
     public Sequence getSequence(String seqName) {
         if (seqName == null) {
             return getDefaultSequence();
@@ -827,6 +922,7 @@ public class DatasourcePlatform implements Platform {
      * Remove sequence corresponding to name.
      * Doesn't remove default sequence.
      */
+    @Override
     public Sequence removeSequence(String seqName) {
         if (this.sequences != null) {
             synchronized(sequencesLock) {
@@ -840,6 +936,7 @@ public class DatasourcePlatform implements Platform {
     /**
      * Remove all sequences, but the default one.
      */
+    @Override
     public void removeAllSequences() {
         this.sequences = null;
     }
@@ -848,6 +945,7 @@ public class DatasourcePlatform implements Platform {
      * INTERNAL:
      * Returns a map of sequence names to Sequences (may be null).
      */
+    @Override
     public Map getSequences() {
         return this.sequences;
     }
@@ -856,6 +954,7 @@ public class DatasourcePlatform implements Platform {
      * INTERNAL:
      * Used only for writing into XML or Java.
      */
+    @Override
     public Map getSequencesToWrite() {
         if ((getSequences() == null) || getSequences().isEmpty()) {
             return null;
@@ -876,6 +975,7 @@ public class DatasourcePlatform implements Platform {
      * INTERNAL:
      * Used only for writing into XML or Java.
      */
+    @Override
     public Sequence getDefaultSequenceToWrite() {
         if (usesPlatformDefaultSequence()) {
             return null;
@@ -888,14 +988,16 @@ public class DatasourcePlatform implements Platform {
      * INTERNAL:
      * Sets sequences - for XML support only
      */
+    @Override
     public void setSequences(Map sequences) {
         this.sequences = sequences;
     }
-    
+
     /**
      * INTERNAL:
      * Indicates whether defaultSequence is the same as platform default sequence.
      */
+    @Override
     public boolean usesPlatformDefaultSequence() {
         if (!hasDefaultSequence()) {
             return true;
@@ -903,7 +1005,7 @@ public class DatasourcePlatform implements Platform {
             return getDefaultSequence().equals(createPlatformDefaultSequence());
         }
     }
-    
+
     /**
      * INTERNAL:
      * Returns the correct quote character to use around SQL Identifiers that contain
@@ -913,17 +1015,18 @@ public class DatasourcePlatform implements Platform {
      * @see getEndDelimiter()
      * @return The quote character for this platform
      */
+    @Deprecated
     public String getIdentifierQuoteCharacter() {
         return "";
     }
-    
+
     /**
      * INTERNAL:
      */
     public ConnectionCustomizer createConnectionCustomizer(Accessor accessor, AbstractSession session) {
         return null;
     }
-    
+
     /**
      * Allows query prepare to be disable in the platform.
      * This is required for some EIS platforms, that cannot prepare the call.
@@ -931,14 +1034,14 @@ public class DatasourcePlatform implements Platform {
     public boolean shouldPrepare(DatabaseQuery query) {
         return true;
     }
-    
+
     /**
      * Return if the database requires the ORDER BY fields to be part of the select clause.
      */
     public boolean shouldSelectIncludeOrderBy() {
         return false;
     }
-    
+
     /**
      * Return if the database requires the ORDER BY fields to be part of the select clause.
      */
@@ -1024,7 +1127,7 @@ public class DatasourcePlatform implements Platform {
     public ValueReadQuery buildSelectQueryForIdentity() {
         return null;
     }
-    
+
     /**
      * INTERNAL:
      * Returns query used to read back the value generated by Identity.
@@ -1036,7 +1139,7 @@ public class DatasourcePlatform implements Platform {
     public ValueReadQuery buildSelectQueryForIdentity(String seqName, Integer size) {
         return null;
     }
-    
+
     /**
      * INTERNAL:
      * Return the correct call type for the native query string.
@@ -1057,7 +1160,6 @@ public class DatasourcePlatform implements Platform {
         return subExp1.equal(subExp2);
     }
 
-    
     /**
      * INTERNAL:
      * Some database platforms have a limit for the number of parameters in an IN clause.
